[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/screens/ScreenBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/ChangeDeck/ChangeDeck.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/stylized_shape/Rectangle.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/screens/CardListStats/components/Header/Header.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/components/IconButton/IconButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/screens/CardListStats/components/CardInfo/CardInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/screens/CardListStats/CardListStats.gd" type="Script" id=7]

[node name="CardListStats" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="MarginContainer" parent="." index="0"]
custom_constants/margin_right = 37

[node name="Layout" type="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 24.0
margin_top = 24.0
margin_right = 780.0
margin_bottom = 640.0
custom_constants/separation = 0

[node name="ChangeDeck" parent="MarginContainer/Layout" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 756.0
margin_bottom = 62.0

[node name="CardList" type="MarginContainer" parent="MarginContainer/Layout" index="1"]
margin_top = 62.0
margin_right = 756.0
margin_bottom = 540.0
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 28
custom_constants/margin_left = 32

[node name="Content" type="VBoxContainer" parent="MarginContainer/Layout/CardList" index="0"]
margin_left = 32.0
margin_top = 28.0
margin_right = 724.0
margin_bottom = 478.0
custom_constants/separation = 0

[node name="Header" parent="MarginContainer/Layout/CardList/Content" index="0" instance=ExtResource( 4 )]

[node name="Space" type="Control" parent="MarginContainer/Layout/CardList/Content" index="1"]
margin_top = 62.0
margin_right = 692.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 16 )

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Layout/CardList/Content" index="2"]
margin_top = 78.0
margin_right = 692.0
margin_bottom = 450.0
size_flags_vertical = 3

[node name="Cards" type="VBoxContainer" parent="MarginContainer/Layout/CardList/Content/ScrollContainer" index="0"]
margin_right = 680.0
margin_bottom = 464.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="CardInfo" parent="MarginContainer/Layout/CardList/Content/ScrollContainer/Cards" index="0" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 680.0
margin_bottom = 64.0

[node name="CardInfo2" parent="MarginContainer/Layout/CardList/Content/ScrollContainer/Cards" index="1" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 680.0
margin_bottom = 144.0

[node name="CardInfo3" parent="MarginContainer/Layout/CardList/Content/ScrollContainer/Cards" index="2" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 160.0
margin_right = 680.0
margin_bottom = 224.0

[node name="CardInfo4" parent="MarginContainer/Layout/CardList/Content/ScrollContainer/Cards" index="3" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 680.0
margin_bottom = 304.0

[node name="CardInfo5" parent="MarginContainer/Layout/CardList/Content/ScrollContainer/Cards" index="4" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 320.0
margin_right = 680.0
margin_bottom = 384.0

[node name="CardInfo6" parent="MarginContainer/Layout/CardList/Content/ScrollContainer/Cards" index="5" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 400.0
margin_right = 680.0
margin_bottom = 464.0

[node name="Footer" type="Control" parent="MarginContainer/Layout" index="2"]
margin_top = 540.0
margin_right = 756.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 76 )

[node name="Style" type="Control" parent="MarginContainer/Layout/Footer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundBox" parent="MarginContainer/Layout/Footer/Style" index="0" instance=ExtResource( 3 )]
background_color = "TRANSLUCENT"
border_color = "PRIMARY"
corner_radius = [ 0, 0, 0, 0 ]
border_width = [ 0, 0, 1, 0 ]

[node name="Content" type="MarginContainer" parent="MarginContainer/Layout/Footer" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 12
custom_constants/margin_left = 16
custom_constants/margin_bottom = 12

[node name="Layout" type="HBoxContainer" parent="MarginContainer/Layout/Footer/Content" index="0"]
margin_left = 16.0
margin_top = 12.0
margin_right = 740.0
margin_bottom = 68.0
alignment = 2

[node name="LeftButton" parent="MarginContainer/Layout/Footer/Content/Layout" index="0" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 616.0
margin_right = 668.0
margin_bottom = 56.0
_new_symbol = "<"

[node name="RightButton" parent="MarginContainer/Layout/Footer/Content/Layout" index="1" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 672.0
margin_right = 724.0
margin_bottom = 56.0

[node name="CongratulationsMessage" parent="." index="2"]
margin_right = 17157.0
margin_bottom = 13440.0

[connection signal="concept_order" from="MarginContainer/Layout/CardList/Content/Header" to="." method="_on_Header_concept_order"]
[connection signal="effectivity_order" from="MarginContainer/Layout/CardList/Content/Header" to="." method="_on_Header_effectivity_order"]
[connection signal="hit_order" from="MarginContainer/Layout/CardList/Content/Header" to="." method="_on_Header_hit_order"]
[connection signal="review_order" from="MarginContainer/Layout/CardList/Content/Header" to="." method="_on_Header_review_order"]
[connection signal="button_down" from="MarginContainer/Layout/Footer/Content/Layout/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_down" from="MarginContainer/Layout/Footer/Content/Layout/RightButton" to="." method="_on_RightButton_button_down"]
